help pages links to new customs materials
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@9686 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/ar/Stakeholder curricula.html
+++ b/CurrentRelease/ar/Stakeholder curricula.html
@@ -79,7 +79,8 @@
 <P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/02) Stakeholder curricula/CC05Ar.pdf" target=_blank><FONT size=3>العلماء ،الاكادميين، الجمعيات العاملة في مجال السلامة الاحيائية</FONT></A></P>
 <P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/02) Stakeholder curricula/CC06Ar.pdf" target=_blank><FONT size=3>الجمارك ومراقبي الحدود</FONT></A></P>
 <P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/02) Stakeholder curricula/CC07Ar.pdf" target=_blank><FONT size=3>الاعلام</FONT></A></P>
-<P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/02) Stakeholder curricula/CC08Ar.pdf" target=_blank><FONT size=3>الجمهور العام</FONT></A></P></DIV>
+<P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/02) Stakeholder curricula/CC08Ar.pdf" target=_blank><FONT size=3>الجمهور العام</FONT></A></P>
+<P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/02) Stakeholder curricula/CC09Ar.pdf" target=_blank><FONT size=3>برنامج دراسي مثالي: موظفي الصحة النباتية</FONT></A></P></DIV>
             <a name="seealsobookmark"></a>
             
         </div>
