--- a/CurrentRelease/ar/Training_Modules.html
+++ b/CurrentRelease/ar/Training_Modules.html
@@ -80,7 +80,8 @@
 <P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/Ar/03) Training Modules/MO06En.pdf" target=_blank><FONT size=3>استعمال المركز الاداري (بالانجليزية)</FONT></A></P>
 <P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/Ar/03) Training Modules/MO07En.pdf" target=_blank><FONT size=3>تسجيل المعلومات الوطنية (بالانجليزية)</FONT></A></P>
 <P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/Ar/03) Training Modules/MO08En.pdf" target=_blank><FONT size=3>تسجيل تقاسم المعلومات (بالانجليزية)</FONT></A></P>
-<P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/Ar/03) Training Modules/MO10Ar.pdf" target=_blank><FONT size=3>كيفية الغدو كطرف للبروتوكول</FONT></A></P></DIV>
+<P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/Ar/03) Training Modules/MO10Ar.pdf" target=_blank><FONT size=3>كيفية الغدو كطرف للبروتوكول</FONT></A></P>
+<P><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/Ar/03) Training Modules/MO11Ar.pdf" target=_blank><FONT size=3>استخدام غرفة تبادل معلومات السلامة الأحيائية لمهام موظفي الجمارك و مراقبة الحدود</FONT></A></P></DIV>
             <a name="seealsobookmark"></a>
             
         </div>
