--- a/CurrentRelease/en/Case_Studies.html
+++ b/CurrentRelease/en/Case_Studies.html
@@ -103,6 +103,10 @@
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/05)%20Case%20Studies/CS25En.pdf" target=_blank>Case 25 A Competent National Authority registers a risk assessment and decision to import herbicide tolerant cotton</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS26En.pdf" target=_blank>Case 26 NFP registers laws</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS27En.pdf" target=_blank>Case 27 Central Portal Information Route</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS28En.pdf" target=_blank>Case 28 Principal Custom officer looks for relevant CPB articles, COP-MOP decisions and capacity building opportunities</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS29En.pdf" target=_blank>Case 29 Customs officer looks for laboratories for detection and identification of LMOs</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS30En.pdf" target=_blank>Case 30 Customs or border control officer looks for unapproved soybean events</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS31En.pdf" target=_blank>Case 31 Phytosanitary officer looks for maize stacked events</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
