--- a/CurrentRelease/en/Stakeholder curricula.html
+++ b/CurrentRelease/en/Stakeholder curricula.html
@@ -84,6 +84,7 @@
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC06En.pdf" target=_blank>Customs and border control</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC07En.pdf" target=_blank>Media</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC08En.pdf" target=_blank>General Public</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC09En.pdf" target=_blank>Phytosanitary officers</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
