--- a/CurrentRelease/en/Training_Modules.html
+++ b/CurrentRelease/en/Training_Modules.html
@@ -85,6 +85,7 @@
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO07En.pdf" target=_blank>Registering National Information in the BCH Central Portal</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO08En.pdf" target=_blank>Sharing Biosafety Information on the BCH Central</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/03)%20Training%20Modules/MO10En.pdf" target=_blank>Information-sharing Obligations On Becoming a Party to the Protocol</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/03)%20Training%20Modules/MO11En.pdf" target=_blank>Using the BCH for Customs and Border Control tasks</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
