--- a/CurrentRelease/es/Case_Studies.html
+++ b/CurrentRelease/es/Case_Studies.html
@@ -103,6 +103,10 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS25Es.pdf" target=_blank>Caso 25 ANC registra evaluación de riesgo y decisición de importar algodón</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS26Es.pdf" target=_blank>Caso 26 Un PFN registra leyes</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS27Es.pdf" target=_blank>Caso 27 Ruta de Información del Portal Central</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS28Es.pdf" target=_blank>Caso 28 Oficial Principal de Aduanas busca artículos relevantes del PCB, decisiones de la COP-MOP y oportunidades de creación de capacidad</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS29Es.pdf" target=_blank>Caso 29 Oficial de aduanas busca laboratorios para detección e identificación de OVMs</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS30Es.pdf" target=_blank>Caso 30 Oficial de aduanas o control fronterizo busca eventos no aprobados en soya </A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/05) Case Studies/CS31Es.pdf" target=_blank>Caso 31 Oficial fitosanitario busca eventos apilados en el maíz</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
