--- a/CurrentRelease/es/Stakeholder curricula.html
+++ b/CurrentRelease/es/Stakeholder curricula.html
@@ -84,6 +84,7 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC06Es.pdf" target=_blank>Aduanas y Controles Fronterizos</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC07Es.pdf" target=_blank>Medios de Comunicación</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC08Es.pdf" target=_blank>Público General</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC09Es.pdf" target=_blank>Oficiales Fitosanitarios</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
