--- a/CurrentRelease/es/Training_Modules.html
+++ b/CurrentRelease/es/Training_Modules.html
@@ -85,6 +85,7 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/03) Training Modules/MO07Es.pdf" target=_blank>Registrar información Nacional</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/03) Training Modules/MO08Es.pdf" target=_blank>Intercambio de Información</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/03)%20Training%20Modules/MO10Es.pdf" target=_blank>Obligaciones de intercambio de información al convertirse en Parte en el Protocolo</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/03)%20Training%20Modules/MO11Es.pdf" target=_blank>Usando el CIISB para tareas de Oficiales de Aduanas y de Control Fronterizo</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
