--- a/CurrentRelease/fr/Case_Studies.html
+++ b/CurrentRelease/fr/Case_Studies.html
@@ -98,6 +98,10 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS25Fr.pdf" target=_blank>Cas 25 ANC enregistre une évaluation des risque et une décision pour importer du coton GM</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS26Fr.pdf" target=_blank>Cas 26 Correspondant National enregistre des lois sur biosécurité.</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS27Fr.pdf" target=_blank>Cas 27 Destination des données du Portail Central</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS28Fr.pdf" target=_blank>Cas 28 Un agent principal des douanes recherche des articles pertinents du PCPRB, des décisions de la COP-MOP et des opportunités de renforcement de capacité</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS29Fr.pdf" target=_blank>Cas 29 Un Douanier cherche des laboratoires pour la détection et l'identification des organismes vivants modifiés</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS30Fr.pdf" target=_blank>Cas 30 Un Agent des Douanes ou de Contrôle aux Frontières cherche des évènements de soja non approuvés</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/05) Case Studies/CS31Fr.pdf" target=_blank>Cas 31 Un Agent phytosanitaire cherche des évènements cumulés de maïs</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
