--- a/CurrentRelease/fr/Stakeholder curricula.html
+++ b/CurrentRelease/fr/Stakeholder curricula.html
@@ -79,6 +79,7 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC06Fr.pdf" target=_blank>Douanes et contrôle de frontières.</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC07Fr.pdf" target=_blank>Media</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC08Fr.pdf" target=_blank>Public General</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC09Fr.pdf" target=_blank>Agents Phytosanitaires</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
