--- a/CurrentRelease/fr/Training_Modules.html
+++ b/CurrentRelease/fr/Training_Modules.html
@@ -80,6 +80,7 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/03) Training Modules/MO07En.pdf" target=_blank>Enregistrement d’Informations Nationales (en anglais)</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/03) Training Modules/MO08En.pdf" target=_blank>Echange d’Informations sur la Biosécurité (en anglais)</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/03) Training Modules/MO10Fr.pdf" target=_blank>Obligations d’échange d’informations lorsque l’on devient Partie au Protocole</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/03) Training Modules/MO11Fr.pdf" target=_blank>Utiliser le CEPRB pour les tâches des Douanes et de Contrôle aux Frontières</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
