addition of custom officers materials in russian
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@9791 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/ru/Case_Studies.html
+++ b/CurrentRelease/ru/Case_Studies.html
@@ -98,6 +98,10 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS25Ru.pdf" target=_blank>ПРИМЕР 25 Национальный координационный центр вводит сведения об оценке риска ГМ хлопка</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS26Ru.pdf" target=_blank>ПРИМЕР 26 Национальный координационный центр вводит сведения о законодательстве</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS27Ru.pdf" target=_blank>ПРИМЕР 27 Информационная схема Центрального портала МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS28Ru.pdf" target=_blank>ПРИМЕР 28 Ведущий сотрудник таможни ищет статьи КПБ, решения КС-СС и мероприятия по созданию потенциала, имеющие отношение к его работе</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS29Ru.pdf" target=_blank>ПРИМЕР 29 Служащий таможни ищет лаборатории для обнаружения и идентификации ЖИО</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS30Ru.pdf" target=_blank>ПРИМЕР 30 Сотрудник таможенной службы ищет информацию о генетических модификациях сои, не получивших одобрения</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/05) Case Studies/CS31Ru.pdf" target=_blank>ПРИМЕР 31 Сотрудник фитосанитарной службы ищет информацию о  модификациях кукурузы с пакетированными генами</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
