--- a/CurrentRelease/ru/Stakeholder curricula.html
+++ b/CurrentRelease/ru/Stakeholder curricula.html
@@ -79,6 +79,7 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/02) Stakeholder curricula/CC06Ru.pdf" target=_blank>Представители таможенного и пограничного контроля</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/02) Stakeholder curricula/CC07Ru.pdf" target=_blank>Представители средств массовой информации</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/02) Stakeholder curricula/CC08Ru.pdf" target=_blank>Общественность</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/02) Stakeholder curricula/CC09Ru.pdf" target=_blank>ТИПОВАЯ УЧЕБНАЯ ПРОГРАММА:СОТРУДНИКИ ФИТОСАНИТАРНЫХ СЛУЖБ </A></P>
             <a name="seealsobookmark"></a>
             
         </div>
