--- a/CurrentRelease/ru/Training_Modules.html
+++ b/CurrentRelease/ru/Training_Modules.html
@@ -80,6 +80,7 @@
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO07En.pdf" target=_blank>Предоставление национальных сведений (на английском языке)</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO08En.pdf" target=_blank>Ввод информативных сведений (на английском языке)</A></P>
 <P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO10Ru.pdf" target=_blank>Становление Стороной Картахенского протокола</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO11Ru.pdf" target=_blank>Использование МПБ органами  таможенного и пограничного контроля</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
