appended link to ajaxdemo
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@9805 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/en/AJAX_BCH_Development_Tool.html
@@ -79,7 +79,7 @@
 <P><STRONG>The use of the BCH Ajax Plug-In does not require any specific IT knowledge. The Plug-In works on all server platforms and does not require any software installation. All required files are located on the BCH Central Portal and maintained by the Secretariat.</STRONG></P>
 <P><STRONG>The BCH Ajax Plug-In is a client side application. The connection to the BCH Central Portal is made directly by the client (end-user).</STRONG></P>
 <P class=MsoNormal><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/13)%20%20Ajax%20BCH%20Development%20tool/AX01En.pdf" target=_blank>Ajax User Manual</A></P>
-<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/13)%20%20Ajax%20BCH%20Development%20tool/AX02En.pdf" target=_blank>BCH Ajax PlugIn Exercise</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>BCH Ajax PlugIn Demo</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
