--- a/CurrentRelease/es/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/es/AJAX_BCH_Development_Tool.html
@@ -79,7 +79,7 @@
 <P class=MsoNormal><SPAN lang=EN-CA><B>La utilización del Plug-in del CIISB AJAX no requiere conocimientos específicos de TI. El Plug-in funciona en todas las plataformas y no requiere de instalación ninguna. Todos los archivos necesarios se encuentran en el Portal Central del CIISB y son actualizados por el Secretariado.</B></SPAN></P>
 <P class=MsoNormal><SPAN lang=EN-CA style="FONT-SIZE: 10pt; FONT-FAMILY: Arial"><B>El</B></SPAN> <SPAN lang=EN-CA><B>Plug-in del CIISB AJAX es una aplicación que funciona del lado del cliente. La conexión al Portal Central del CIISB es realizada directamente por el cliente (Usuario Final).</B></SPAN></P>
 <P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/13)%20Ajax%20BCH%20Development%20tool/AX01Es.pdf" target=_blank>Guía de Usuario de Ajax.</A></P>
-<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/13)%20Ajax%20BCH%20Development%20tool/AX02Es.pdf" target=_blank>Ejercicio PlugIn Ajax.</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>BCH Ajax PlugIn Demo</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
