--- a/CurrentRelease/fr/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/fr/AJAX_BCH_Development_Tool.html
@@ -74,7 +74,7 @@
 <P><B>L’utilisation du branchement Ajax du CEPRB ne demande pas de connaissances spécifiques en TIC. Le branchement marche sur toutes les plateformes de serveurs et ne demande aucune installation de logiciels. Tous les fichiers nécessaires sont situés sur le Portail Central du CEPRB et sont entretenus par le Secrétariat.</B></P>
 <P><B>Le branchement Ajax du CEPRB est une application client. La connexion au Portail Central du CEPRB est faite directement par le client (utilisateur final).</B></P>
 <P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/13) Ajax BCH Development tool/AX01Fr.pdf" target=_blank>Ajax Manuel.</A></P>
-<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/13) Ajax BCH Development tool/AX02Fr.pdf" target=_blank>Exercice pratique sur AJAX</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>BCH Ajax PlugIn Demo</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
