updated help pages for added IM no install
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@9836 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/Interactive_Modules.html
+++ b/CurrentRelease/en/Interactive_Modules.html
@@ -78,6 +78,8 @@
             <P><STRONG>There are two interactive training modules designed to enable users to understand the concepts introduced in Training Modules 1 and 2 in a hands-on manner. The modules are designed in Macromedia Flash.Please feel free to download and install the interactive modules.</STRONG></P>
 <P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/04) Interactive Modules/IM01En.exe" target=_blank>Introduction to the Cartagena Protocol on Biosafety</A></P>
 <P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/04) Interactive Modules/IM02En.exe" target=_blank>Introduction to the Biosafety Clearing-House</A></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/04) Interactive Modules/IM1NoInstall_EN.zip" target=_blank>Introduction to the Cartagena Protocol on Biosafety (zip, no installer)</A></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/04) Interactive Modules/IM2NoInstall_EN.zip" target=_blank>Introduction to the Biosafety Clearing-House (zip, no installer)</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
