--- a/CurrentRelease/fr/Interactive_Modules.html
+++ b/CurrentRelease/fr/Interactive_Modules.html
@@ -73,6 +73,9 @@
 <P><STRONG>Il y a deux modules de formation interactifs conçus pour permettre aux utilisateurs de comprendre les concepts introduits dans les Modules de Formation 1 et 2 sous forme de participation active. Les modules sont conçus développés dans Macromedia Flash</STRONG></P>
 <P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/04) Interactive Modules/IM01Fr.exe" target=_blank>Introduction au Protocole de Cartagena sur la Biosécurité</A></P>
 <P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/04) Interactive Modules/IM02Fr.exe" target=_blank>Introduction au Centre D'Echange pour la Préventions des Risques Biotechnologiques</A></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/04) Interactive Modules/IM1NoInstall_FR.zip" target=_blank>Introduction au Protocole de Cartagena sur la Biosécurité (zip, non-Windows)</A></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/04) Interactive Modules/IM2NoInstall_FR.zip" target=_blank>Introduction au Centre D'Echange pour la Préventions des Risques Biotechnologiques (zip, non-Windows)</A></P>
+
             <a name="seealsobookmark"></a>
             
         </div>
