texts for Ajax plugin demo link
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@9838 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/ar/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/ar/AJAX_BCH_Development_Tool.html
@@ -75,7 +75,7 @@
 <P><STRONG><FONT size=3>لا يتطلب استعمال غرفة تبادل معلومات السلامة الاحيائية وفقا لاجاكس بلاغ-اين معرفة معينة بالتكنولوجيا المعلوماتية. نظام البلاغ اين يعمل على كل المنبر الالكترونية ولا يتطلب تركيب اي برنامج الكتروني. كل الملفات المطلوبة موجودة على البوابة المركزية لغرفة تبادل معلومات السلامة الاحيائية التي يتم صيانتها من قبل الامانة العامة لاتفاقية التنوع البيولوجي.</FONT></STRONG></P>
 <P><STRONG><FONT size=3>ان غرفة تبادل معلومات السلامة الاحيائية المنشاة وفقا لاجاكس بلاغ-اين هي تطبيق من جهة الزبون. الاتصال بالبوابة المركزية للغرفة يتم مباشرة من قبل الزبزن (المستخدم النهائي).</FONT></STRONG></P>
 <P class=MsoNormal><FONT size=3><IMG class=activityicon alt=Resource src="images/pdf.gif"></FONT> <A href="http://bch.cbd.int/help/trainingmaterials/Ar/13) Ajax BCH Development tool/AX01Ar.pdf" target=_blank><FONT size=3>دليل المستخدم للاجاكس</FONT></A></P>
-<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>BCH Ajax PlugIn Demo</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>شرح لتطبيق  ربط اجاكس (AJAX plugin)</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
