--- a/CurrentRelease/ru/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/ru/AJAX_BCH_Development_Tool.html
@@ -74,7 +74,7 @@
 <P><B>Использование программного модуля МПБ «Ajax Plug-In» не требует специфических знаний в области информационных технологий. Он работает на любых серверных платформах и не требует установки дополнительного программного обеспечения. Все необходимые файлы находятся на Центральном портале МПБ и поддерживаются Секретариатом КБР.</B></P>
 <P><B>Программный модуль МПБ «Ajax Plug-In» является «клиентским» приложением. Соединение с Центральным порталом МПБ осуществляется непосредственно клиентом (непосредственным пользователем).</B></P>
 <P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/13) Ajax BCH Development tool/AX01Ru.pdf" target=_blank>Руководство пользователя программного модуля Ajax Plug-In.</A></P>
-<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>BCH Ajax PlugIn Demo</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/web.gif"> <A href="http://bch.cbd.int/help/topics/ajaxdemo/index.html" target=_blank>Приложение для демонстрации плагина AJAX </A></P>
             <a name="seealsobookmark"></a>
             
         </div>
